--- a/views/statistics.handlebars
+++ b/views/statistics.handlebars
@@ -15,6 +15,18 @@
 			<button type="button" onclick="goBack()" id="back">Back</button> 
 			<h1>Statistics</h1>
 		</div>	
+		<form id="survey">
+			<p>Was this page what you expected?</p>
+			<input type="checkbox" id="expectedYes" onclick="disableExpected()">
+			<label for="expectedyes">Yes</label>
+			<input type="checkbox" id="expectedNo" onclick="disableExpected()">
+			<label for="expectedno">No</label>
+			<p>Did you find this page useful?</p>
+			<input type="checkbox" id="usefulYes" onclick="disableUseful()">
+			<label for="usefulyes">Yes</label>
+			<input type="checkbox" id="usefulNo" onclick="disableUseful()">
+			<label for="usefulno">No</label>
+		</form>
 		<div class='piecharts'>
 			<div id="2weekspiechart"></div>
 			<div id="6monthspiechart"></div>
@@ -46,10 +58,18 @@
 		function goBack(){
 			window.history.back();
 		}
+		function disableExpected() {
+			$('#expectedYes').attr("disabled", true);
+			$('#expectedNo').attr("disabled", true);
+		}
+		function disableUseful() {
+			$('#usefulYes').attr("disabled", true);
+			$('#usefulNo').attr("disabled", true);
+		}
 	</script>
 	<script type="text/javascript">
 		(function () {
-			//TODO: Samuel: Make an API call to get some stats. Use genres?
+			//TODO: Samuel: Add another genre detail, percentags next to labels? 
 
 			/**
 			 * Calls Spotify API to get the Top artists and does some fanagling to determine top genres.
@@ -86,13 +106,19 @@
 								}
 							}	
 						}
-						var popGenres = [['Genre', 'Popularity']];
+						var popGenres = []
 						genres.forEach((value, key) => {
   							//console.log(`Genre ${key} has popularity ${value}`);
 							if (value > 5) {
 								popGenres.push([key, value]);
 							}
 						});
+						popGenres.sort(function(x,y) { 
+							if (x[1] > y[1]) return -1;
+							if (x[1] < y[1]) return 1;
+							return 0;
+						});
+						popGenres.unshift(['Genre', 'Popularity']);
 						callback_function(popGenres);
 					}
 				});
