--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -168,7 +168,7 @@
 						var song2link = response.items[1].external_urls.spotify;
 						var song3 = response.items[2].name;
 						var song3link = response.items[2].external_urls.spotify;
-						var favsongs = '<li>Top 3 Favorite Songs the last 2 weeks:</li>' + 
+						var favsongs = '<li>Top 3 Favorite Songs the last 2 weeks:</li><br>' + 
 							'<li class="favsong"><a href="' + song1link + '">' + song1 + ' </a></li><br>' +
 							'<li class="favsong"><a href="' + song2link + '">' + song2 + ' </a></li><br>' +
 							'<li class="favsong"><a href="' + song3link + '">' + song3 + ' </a></li>';
