--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -1,6 +1,20 @@
 <html>
 <head>
 	<title>Favorites</title>
+	<!-- Google Analytics Content Experiment code -->
+	<script>function utmx_section(){}function utmx(){}(function(){var
+	k='191003878-0',d=document,l=d.location,c=d.cookie;
+	if(l.search.indexOf('utm_expid='+k)>0)return;
+	function f(n){if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.
+	indexOf(';',i);return escape(c.substring(i+n.length+1,j<0?c.
+	length:j))}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;d.write(
+	'<sc'+'ript src="'+'http'+(l.protocol=='https:'?'s://ssl':
+	'://www')+'.google-analytics.com/ga_exp.js?'+'utmxkey='+k+
+	'&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='+new Date().
+	valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
+	'" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
+	</script><script>utmx('url','A/B');</script>
+	<!-- End of Google Analytics Content Experiment code -->
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -27,14 +41,14 @@
 		</div>
 		<form id="survey">
 			<p>Was this page what you expected?</p>
-			<input type="checkbox" id="expectedYes" onclick="disableExpected()">
+			<input type="checkbox" id="expectedYes" onclick="handleExpectedYes()">
 			<label for="expectedyes">Yes</label>
-			<input type="checkbox" id="expectedNo" onclick="disableExpected()">
+			<input type="checkbox" id="expectedNo" onclick="handleExpectedNo()">
 			<label for="expectedno">No</label>
 			<p>Did you find this page useful?</p>
-			<input type="checkbox" id="usefulYes" onclick="disableUseful()">
+			<input type="checkbox" id="usefulYes" onclick="handleUsefulYes()">
 			<label for="usefulyes">Yes</label>
-			<input type="checkbox" id="usefulNo" onclick="disableUseful()">
+			<input type="checkbox" id="usefulNo" onclick="handleUsefulNo()">
 			<label for="usefulno">No</label>
 		</form>
 		<div class="timerangeselector">
@@ -58,12 +72,31 @@
 	<!-- connected javascript files -->
 	{{> footer}}
 	<script>
+		//back button
 		function goBack(){
 			window.history.back();
+		}
+		//google analytics for yes and no on favorites being what user expected
+		function handleExpectedYes() {
+			ga("send", "event", "favoritesExpectedYes", "choose");
+			disableExpected();
+		}
+		function handleExpectedNo() {
+			ga("send", "event", "favoritesExpectedNo", "choose");
+			disableExpected();
 		}
 		function disableExpected() {
 			$('#expectedYes').attr("disabled", true);
 			$('#expectedNo').attr("disabled", true);
+		}
+		//google analytics for yes and no on favorites being useful
+		function handleUsefulYes() {
+			ga("send", "event", "favoritesUsefulYes", "choose");
+			disableUseful();
+		}
+		function handleUsefulNo() {
+			ga("send", "event", "favoritesUsefulNo", "choose");
+			disableUseful();
 		}
 		function disableUseful() {
 			$('#usefulYes').attr("disabled", true);
