--- a/views/statistics.handlebars
+++ b/views/statistics.handlebars
@@ -5,17 +5,7 @@
 	<script type="text/javascript" src="https://www.google.com/jsapi?autoload=
 	{'modules':[{'name':'visualization','version':'1.1','packages':['corechart']}]}">
 	</script>
-	<!-- Google Analytics -->
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-		ga('create', 'UA-135692306-1', 'auto');
-		ga('send', 'pageview');
-	</script>
-<!-- End Google Analytics -->
+	{{> googleanalytics}}
 	{{> header}}	
 </head>
 <body>
