--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1 class="title">TEAM 1 Music</h1>
+		<h1 class="title">Muself</h1>
 		<div style="text-align: center;">
 			<div class="login-table">
 			<div class="form-group">
