Got rid of playlists page

--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -43,7 +43,7 @@
 			<li><a href="/userprofile">Account</a></li>
 			<li><a href='/Friends'>Friends</a></li>
 			<li><a href="/Statistics">Statistics</a></li>
-			<li><a href='/Favorites/page_A' class="active">Favorites</a></li>
+			<li><a href='/Favorites/' class="active">Favorites</a></li>
 		</ul>
 	</div>
 
