--- a/views/statistics.handlebars
+++ b/views/statistics.handlebars
@@ -48,7 +48,7 @@
 			<li><a href="/userprofile">Account</a></li>
 			<li><a href='/Friends'>Friends</a></li>
 			<li><a href="/Statistics" class="active">Statistics</a></li>
-			<li><a href='/Favorites/page_A'>Favorites</a></li>
+			<li><a href='/Favorites/'>Favorites</a></li>
 		</ul>
 	</div>
 
