--- a/views/friends.handlebars
+++ b/views/friends.handlebars
@@ -33,7 +33,7 @@
 			<li><a href="/userprofile">Account</a></li>
 			<li><a href='/Friends' class="active">Friends</a></li>
 			<li><a href="/Statistics">Statistics</a></li>
-			<li><a href='/Favorites/page_A'>Favorites</a></li>
+			<li><a href='/Favorites/'>Favorites</a></li>
 		</ul>
 		</div>
 	</div>
