--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -22,8 +22,8 @@
 			</div>
 			<div class="sub">
 				<!-- Links to Stats and Favorites user pages. Need to add link to Stats page and fill those pages -->
-				<h3><a href="/Statistics" id="statslink">Statistics </a><span class="glyphicon glyphicon-stats"></span></h3><hr>
-				<h3><a href="/Favorites/page_A" id="favslink">Favorites </a><span class="glyphicon glyphicon-heart"></span></h3><hr>
+				<h3><a href="/Statistics/" id="statslink">Statistics </a><span class="glyphicon glyphicon-stats"></span></h3><hr>
+				<h3><a href="/Favorites/" id="favslink">Favorites </a><span class="glyphicon glyphicon-heart"></span></h3><hr>
 			</div>
 		</div>
 		<!-- At a Glance Table -->
@@ -72,7 +72,7 @@
 			<li><a href="/userprofile" class="active">Account</a></li>
 			<li><a href='/Friends'>Friends</a></li>
 			<li><a href="/Statistics">Statistics</a></li>
-			<li><a href='/Favorites/page_A'>Favorites</a></li>
+			<li><a href='/Favorites/'>Favorites</a></li>
 		</ul>
 	</div>
 
