Working on adding playlists

--- a/views/playlists.handlebars
+++ b/views/playlists.handlebars
@@ -1,9 +1,8 @@
 <html>
 <head>
-	<title>Favorites</title>
+	<title>Playlists</title>
 	{{> header}}
 	<!-- Linked css files -->
-    <link href="/css/favorites.css" rel="stylesheet">
 </head>
 <body>
 	<!-- bootstrap container for page content -->
@@ -12,61 +11,18 @@
 		<div class="backandname">
 			<button type="button" onclick="goBack()" id="back">Back</button> 
 			<center>
-				<h2>Favorites</h2>
+				<h2>Playlists</h2>
 			</center>
 			<p><b>Playlists from Spotify:</b></p>
 		</div>
 		<h1 id="favsmsg" style="display: none">No Favorites Yet :( Try connecting a Spotify account!</h1>
-		<div class="playlists">
-			<div class="row">
-				<div class="Playlist" id="1">
-					<div class="thumbnail">
-						<img src="https://pl.scdn.co/images/pl/default/e3319943c4af9e1e3b0ec9ce4ef4457a1f788c23">
-						<a href="https://open.spotify.com/playlist/3FJd21jWvCjGCLx7eKrext"><p>Video Game Masterpiece</p></a>
-					</div>
-				</div>
-				<div class="Playlist" id="2">
-					<div class="thumbnail">
-						<img src="https://i.scdn.co/image/2976d930b671fdf183cf2c4fe253faa2c5329599">
-						<a href="https://open.spotify.com/album/04uEX0wzsnA5UcaEtxcbal"><p>Distant Worlds</p></a>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="Playlist" id="3">
-					<div class="thumbnail">
-						<img src="https://mosaic.scdn.co/640/0cb369073704b39fdbe58d8b90adcec082fa20796072343320a01ddb0a605a687be95ae4d7b73c9c6ead2fc533a2bcf1c5295382c638cadf56fd4fcb888abe4a03e235829ef0929c0d0503fdc1a05448">
-						<a href="https://open.spotify.com/playlist/5jeAdOL4zdkn4AHgbONh21"><p>Movie Soundtrack Masterpieces</p></a>
-					</div>
-				</div>
-				<div class="Playlist" id="4">
-					<div class="thumbnail">
-						<img src="https://mosaic.scdn.co/640/0d1d7068e43d40954bb72aeb7a1b5d342bfe8b1fccb9303e9f4a987044e241f515313fcc5d06cb8cf3e018376af31779f767c87495e24a4f0ee82041fd96909a74217c7da8c15f1017ad38f978e12e5e">
-						<a href="https://open.spotify.com/playlist/2kUK4p2apZqSdEM7j4S2QK"><p>Blue Mountain State</p></a>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="Playlist" id="5">
-					<div class="thumbnail">
-						<img src="https://mosaic.scdn.co/640/1f8ad352f1889c317dbb8e76edc067adbb24388eabc77faa7c5be9f55319ddedbf94a05b6a9e6c11caa334a497de0d0c321a28f4861f79d42ce4f9e9f59cae8f5a167524527c46c14a2f5a76bbc0d305">
-						<a href="https://open.spotify.com/playlist/1ifFd7IBbM4vZKPNeQKve7"><p>Death Valley</p></a>
-					</div>
-				</div>
-				<div class="Playlist" id="6">
-					<div class="thumbnail">
-						<img src="https://mosaic.scdn.co/640/03e6e600fb3b9c4c6ef0df6b0d287d0e7d18d7992a02f49aeb969a346525a5c410bff89eaa2579db499a51b4338de0bbd9a65dc85e50f1c67bc18bbe4e8b9a2b12a8b30e135890bbf3be5979b227ed10">
-						<a href="https://open.spotify.com/playlist/2iKv43i7Ev28uetnfHX52p"><p>Barney's Get Psyched Mix</p></a>
-					</div>
-				</div>
-			</div>
-		</div>
+		<div class="playlists"></div>
 		<!-- Navbar Section -->
 		<ul class="navbar">
 			<li><a href="/userprofile">Account</a></li>
-			<li><a href='/Friends'>Friends</a></li>
-			<li><a href="/Statistics">Statistics</a></li>
-			<li><a href='/Favorites/page_B' class="active">Favorites</a></li>
+			<li><a href='/Playlists/' class="active">Playlists</a></li>
+			<li><a href="/Statistics/">Statistics</a></li>
+			<li><a href='/Favorites/'>Favorites</a></li>
 		</ul>
 	</div>
 
