--- a/views/statistics.handlebars
+++ b/views/statistics.handlebars
@@ -46,9 +46,9 @@
 		<!-- Navbar Section -->
 		<ul class="navbar">
 			<li><a href="/userprofile">Account</a></li>
-			<li><a href='/Friends'>Friends</a></li>
+			<li><a href='/Playlists'>Playlists</a></li>
 			<li><a href="/Statistics" class="active">Statistics</a></li>
-			<li><a href='/Favorites/'>Favorites</a></li>
+			<li><a href='/Favorites'>Favorites</a></li>
 		</ul>
 	</div>
 
