--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -70,7 +70,7 @@
 		<!-- Navbar Section -->
 		<ul class="navbar">
 			<li><a href="/userprofile" class="active">Account</a></li>
-			<li><a href='/Friends'>Friends</a></li>
+			<li><a href='/Playlists'>Playlists</a></li>
 			<li><a href="/Statistics">Statistics</a></li>
 			<li><a href='/Favorites/'>Favorites</a></li>
 		</ul>
