--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -41,9 +41,9 @@
 		<!-- Navbar Section -->
 		<ul class="navbar">
 			<li><a href="/userprofile">Account</a></li>
-			<li><a href='/Friends'>Friends</a></li>
+			<li><a href='/Playlists'>Playlists</a></li>
 			<li><a href="/Statistics">Statistics</a></li>
-			<li><a href='/Favorites/' class="active">Favorites</a></li>
+			<li><a href='/Favorites/ ' class="active">Favorites</a></li>
 		</ul>
 	</div>
 
