Updated Favorites page, Included Playlists Page, Added a new stat

--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -17,7 +17,7 @@
 			</center>
 			<p><b id="fromsource">From Spotify:</b></p>
 		</div>
-		<form id="survey">
+		<form id="survey" style="display: none">
 			<p>Was this page what you expected?</p>
 			<input type="checkbox" id="expectedYes" onclick="handleExpectedYes()">
 			<label for="expectedyes">Yes</label>
